--- a/public/config.json
+++ b/public/config.json
@@ -21,7 +21,7 @@
                 }									
 			],
           "outArguments": [],
-          "url": "https://<your-domain-here>/journeybuilder/execute",
+          "url": "https://mct9813hhqdnlxcbzr0tkgn9rhhm/journeybuilder/execute",
            "verb": "POST",
             "body": "",
             "header": "",
@@ -31,24 +31,24 @@
         }
     },
     "configurationArguments": {
-      "applicationExtensionKey": "__application_key_from_appcenter_here__",
+      "applicationExtensionKey": "96f4d7ac-b66a-487e-a0ee-99d64ed48ce8",
       "save": {
-        "url": "https://<your-domain-here>/journeybuilder/save",
+        "url": "https://mct9813hhqdnlxcbzr0tkgn9rhhm/journeybuilder/save",
           "verb": "POST",
         "useJwt": true
        },
        "publish": {
-        "url": "https://<your-domain-here>/journeybuilder/publish",
+        "url": "https://mct9813hhqdnlxcbzr0tkgn9rhhm/journeybuilder/publish",
            "verb": "POST",
         "useJwt": true
        },
       "stop": {
-        "url": "https://<your-domain-here>/journeybuilder/stop",
+        "url": "https://mct9813hhqdnlxcbzr0tkgn9rhhm/journeybuilder/stop",
            "verb": "POST",
         "useJwt": true
       },
       "validate": {
-        "url": "https://<your-domain-here>/journeybuilder/validate",
+        "url": "https://mct9813hhqdnlxcbzr0tkgn9rhhm/journeybuilder/validate",
         "verb": "POST",
         "useJwt": true
       }
